I added query to retrieve single user resource via endpoint: GET /api/v1/users/{userId}
